--- a/templates/fr/team.html.twig
+++ b/templates/fr/team.html.twig
@@ -251,6 +251,18 @@
             </div>
         </div>
         <div class="member">
+            <div class="photo"><img src="/assets/img/team/gbe.png"></div>
+            <div class="description">
+                <h4>Guillaume Berry</h4>
+                <p>Visual Designer</p>
+                <p class="social-links">
+                    <a class="twitter" href="https://twitter.com/guillaumeberry"><span class="icon">T</span>@guillaumeberry</a>
+                    <a class="mail" href="mailto:guillaume@antistatique.net"><span class="icon">m</span>guillaume@antistatique.net</a>
+                    <a class="linkedin" href="http://linkedin.com/in/guillaumeberry"><span class="icon">L</span>LinkedIn</a>
+                </p>
+            </div>
+        </div>
+        <div class="member">
             <div class="photo"><img src="/assets/img/team/smi.png"></div>
             <div class="description">
                 <h4>Sepehr Milani</h4>
