--- a/less/antistatique.less
+++ b/less/antistatique.less
@@ -1,14 +1,9 @@
-/*
-# Antistatique - Style guide
-
-Automaticaly generated using [Thomas Davis](http://thomasdavis.github.com) project [kaleistyleguide](http://github.com/thomasdavis/kaleistyleguide)
-*/
+// Antistatique Styles
 
 
 // Less utils
 @import "util.less";
 
-// BASE ON SMACSS
 @import "base.less";
 
 @import "layout.less";
