--- a/less/layout.less
+++ b/less/layout.less
@@ -1,11 +1,16 @@
 // BASICS layout
 
-/*
-# Sections
+/*doc
+---
+title: Sections
+name: sections
+category: Layout
+---
+Sections
 
-````
+```html_example
 <section class="highlight"></section>
-````
+```
 */
 section{
   margin: 5px 10px;
@@ -16,8 +21,12 @@ section{
 // Page navigation
 
 
-/*
-# Layout
+/*doc
+---
+title: Aside
+name: aside
+category: Layout
+---
 
 ````
 <section class="with-aside">
@@ -40,7 +49,7 @@ section{
     width: 65%;
   }
 
-  // Modules 
+  // Modules
   .with-aside{
     .clearfix();
     padding-bottom: 3em;
@@ -81,8 +90,12 @@ section{
   }
 }
 
-/*
-# Page content
+/*doc
+---
+title: Page content
+name: page_content
+category: Layout
+---
 
 ````
 <section>
