--- a/less/module-works.less
+++ b/less/module-works.less
@@ -77,10 +77,14 @@
   }
 }
 
-/*
-# icons
+/*doc
+---
+title: Icons
+name: icon
+category: Modules
+---
 
-````
+```html_example
 <div class="icons">
   <ul class="row">
     <li>
@@ -94,7 +98,7 @@
     </li>
   </ul>
 </div>
-````
+```
 */
 .icons{
   .row{
