--- a/less/module.less
+++ b/less/module.less
@@ -156,10 +156,14 @@ footer{
   }
 }
 
-/*
-# Page and post navigation
+/*doc
+---
+title: Page and post navigation
+name: navigation
+category: Modules
+---
 
-````
+```html_example
 <nav class="page-navigation">
   <span class="previous">
     <a href="#"><span class="previous-sign">&laquo;</span> Previous page</a>
@@ -168,7 +172,7 @@ footer{
     <a href="#">Next page <span class="next-sign">&raquo;</span></a>
   </span>
 </nav>
-````
+```
 */
 .page-navigation{
   .clearfix();
@@ -207,7 +211,7 @@ footer{
 @media (min-width: @tabletBreakPoint){
   // Connect
   #connect{
-    /*background: url('../img/logo-a.png') 100% 100% no-repeat; 
+    /*background: url('../img/logo-a.png') 100% 100% no-repeat;
     min-height: 410px;*/
   }
   #tweet{
