--- a/assets/css/antistatique.css
+++ b/assets/css/antistatique.css
@@ -1107,6 +1107,9 @@ footer a {
 .works #courtierspartenaires {
   background-image: url(../img/portfolio-courtierspartenaires.jpg);
 }
+.works #billetlemillion {
+  background-image: url(../img/portfolio-billetlemillion.jpg);
+}
 /*
 # icons
 
