--- a/assets/less/module-works.less
+++ b/assets/less/module-works.less
@@ -69,6 +69,9 @@
   #courtierspartenaires{
     background-image: url(../img/portfolio-courtierspartenaires.jpg);
   }
+  #billetlemillion{
+    background-image: url(../img/portfolio-billetlemillion.jpg);
+  }
 }
 
 /*
