add eventhub.io link

--- a/templates/fr/team.html.twig
+++ b/templates/fr/team.html.twig
@@ -401,7 +401,7 @@
                 </p>
                 <h3 class="title-separation magenta-sep">
                     <span></span>
-                    EventHub
+                    <a href="http://eventhub.io">EventHub</a>
                 </h3>
                 <p>
                     EventHub est une application qui permet d'afficher en temps réel toutes les intéractions sur Twitter et Instagram concernant un mot clé (aussi appelé Hashtag). Ainsi les participants peuvent intéragir et partager leur réaction en direct.
