--- a/assets/less/module.less
+++ b/assets/less/module.less
@@ -33,7 +33,7 @@ header nav ul li:first-child{
 
 @media (min-width: @tabletBreakPoint){
   header.topbar{
-    position: fixed;
+    position: absolute;
     z-index: 99;
     top: 0;
     left: 0;
@@ -207,7 +207,7 @@ footer{
 @media (min-width: @tabletBreakPoint){
   // Connect
   #connect{
-    /*background: url('../img/logo-a.png') 100% 100% no-repeat; 
+    /*background: url('../img/logo-a.png') 100% 100% no-repeat;
     min-height: 410px;*/
   }
   #tweet{
