fix #45 put project navigation to bottom page

--- a/templates/fr/portfolio/base.html.twig
+++ b/templates/fr/portfolio/base.html.twig
@@ -4,7 +4,14 @@
 {% block body_class %}portfolio{% endblock %}
 
 {% block baseline %}
-{% block top_navigation %}
+
+{% endblock %}
+
+
+{% block content %}
+{% endblock %}
+
+{% block bottom_navigation %}
 <section>
   <nav class="page-navigation top">
     {% block previous %}
@@ -20,11 +27,3 @@
   </nav>
 </section>
 {% endblock %}
-{% endblock %}
-
-
-{% block content %}
-
-{% endblock %}
-
-
