--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -62,6 +62,8 @@ _gaq.push(['_trackPageview']);
 
     {% block content %}{% endblock %}
 
+    {% block bottom_navigation %}{% endblock %}
+
     <footer>
         <section>
             <p class="vcard"><strong>Antistatique</strong> <a href="{{ path('contact') }}" class="locality">Lausanne</a> <span class="tel">+41 21 623 63 03</span> <a href="mailto:hello@antistatique.net" class="email">hello@antistatique.net</a></p>
