--- a/assets/less/module-works.less
+++ b/assets/less/module-works.less
@@ -81,6 +81,9 @@
   #rodondijoye {
     background-image: url(../img/portfolio-rj.jpg);
   }
+  #cardis {
+    background-image: url(../img/portfolio-cardis.jpg);
+  }
 }
 
 /*
