--- a/templates/fr/portfolio/brouillondeculture.html.twig
+++ b/templates/fr/portfolio/brouillondeculture.html.twig
@@ -5,8 +5,8 @@
 {% block body_class %}{{ parent() }} brouillondeculture{% endblock %}
 
 
-{% block previous_work %}{{ 'homepage.work.tennislausanne.title' | trans }}{% endblock %}
-{% block previous_link %}{{ path('portfolio_show', { slug: 'tennislausanne' }) }}{% endblock %}
+{% block previous_work %}{{ 'homepage.work.cardis.title' | trans }}{% endblock %}
+{% block previous_link %}{{ path('portfolio_show', { slug: 'cardis' }) }}{% endblock %}
 {% block next_work %}{{ 'homepage.work.rodondijoye.title' | trans }}{% endblock %}
 {% block next_link %}{{ path('portfolio_show', { slug: 'rodondijoye' }) }}{% endblock %}
 
