--- a/assets/less/base.less
+++ b/assets/less/base.less
@@ -3,9 +3,9 @@
 // AS Colors
 @black:                 #333333;
 @white:                 #ffffff;
-@magenta:               #d40b6b;
-@magentaHover:          #b50a5d;
-@vieuxRose:             #eed2da;
+@magenta:               #f1292e;
+@magentaHover:          #c62125;
+@vieuxRose:             #eecdd5;
 @green:                 #30a530;
 @red:                   #a6191d;
 @black80:               #cccccc;
@@ -45,7 +45,7 @@
 @bigBreakPoint:         1200px;
 
 
-/* 
+/*
 # Base styles
 
 ## Responsive titles
@@ -71,7 +71,7 @@ body{
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: @serifFontFamily; 
+  font-family: @serifFontFamily;
   font-style: italic;
   font-weight: normal;
   line-height: 1.2em;
@@ -217,7 +217,7 @@ Quoting
 <blockquote>
   <p>I believe in the Golden Rule — The Man with the Gold . . . Rules.</p>
   <footer>
-    <span class="author">Mr. T</span> 
+    <span class="author">Mr. T</span>
     from <cite>http://blog.neilpie.co.uk/web-dev/html5-quote-attribution</cite>
     </footer>
 </blockquote>
@@ -232,7 +232,7 @@ Un-highlighted quote
 */
 blockquote{
   background-color: rgba(240, 240, 240, 0.8);
-  font-family: @serifFontFamily; 
+  font-family: @serifFontFamily;
   color: @black40;
   padding: 1.3em 1.8em;
   margin: 2em 0;
