fix cardis mistake

--- a/templates/fr/portfolio/cardis.html.twig
+++ b/templates/fr/portfolio/cardis.html.twig
@@ -148,7 +148,7 @@
       <h2>Un site en perpétuelle évolution</h2>
 
       <p>Conscient des améliorations qui peuvent être apporté à la plateforme, Cardis Immobilier Sotheby's International Realty mandate régulièrement Antistatique afin d'apporter des ajustements à différents niveaux.</p>
-      <p>Disposant de son propre réseau de traducteurs qualifié dans la rédaction de contenu de qualité dans diverses langues étrangères, Antistatique à coeur de contribuer à l'amélioration des textes anglophones de son client.</p>
+      <p>Disposant de son propre réseau de traducteurs qualifiés dans la rédaction de contenu de qualité dans diverses langues étrangères, Antistatique à coeur de contribuer à l'amélioration des textes anglophones de son client.</p>
     </div>
   </section>
   <section class="isolated">
