update team page

--- a/templates/fr/team.html.twig
+++ b/templates/fr/team.html.twig
@@ -164,18 +164,6 @@
             </div>
         </div>
         <div class="member">
-            <div class="photo"><img src="/assets/img/team/vgn.png"></div>
-            <div class="description">
-                <h4>Vincent Gschwindemann</h4>
-                <p>Web Designer</p>
-                <p class="social-links">
-                    <a class="twitter" href="http://twitter.com/_20_cents"><span class="icon">T</span>@_20_cents</a>
-                    <a class="mail" href="mailto:vincent@antistatique.net"><span class="icon">m</span>vincent@antistatique.net</a>
-                    <a class="linkedin" href="http://ch.linkedin.com/pub/vincent-gschwindemann/15/376/b59"><span class="icon">L</span>LinkedIn</a>
-                </p>
-            </div>
-        </div>
-        <div class="member">
             <div class="photo"><img src="/assets/img/team/ygn.png"></div>
             <div class="description">
                 <h4>Yann Gouffon</h4>
@@ -184,7 +172,7 @@
                     <a class="twitter" href="http://www.twitter.com/Yago_0"><span class="icon">T</span>@Yago_0</a>
                     <a class="mail" href="mailto:yann@antistatique.net"><span class="icon">m</span>yann@antistatique.net</a>
                     <a class="linkedin" href="http://ch.linkedin.com/pub/yann-gouffon/47/9a0/9bb/"><span class="icon">L</span>LinkedIn</a>
-                    <a class="github" href="https://github.com/yago31"><span class="icon">O</span>yago31</a>
+                    <a class="github" href="https://github.com/yago"><span class="icon">O</span>yago</a>
                 </p>
             </div>
         </div>
@@ -214,6 +202,7 @@
                 </p>
             </div>
         </div>
+        {#
         <div class="member">
             <div class="photo"><img src="/assets/img/team/phm.png"></div>
             <div class="description">
@@ -227,6 +216,7 @@
                 </p>
             </div>
         </div>
+        #}
         <div class="member">
             <div class="photo"><img src="/assets/img/team/som.png"></div>
             <div class="description">
